add EPAM's color into the variables

--- a/styles/scss/variables.scss
+++ b/styles/scss/variables.scss
@@ -17,7 +17,12 @@ $plume: #8E244D;
 $error: $raspberry;
 $warning: $plume;
 
-$red: #f7b1b1;
+$red: #CB2323;
+$fuchsia:  #E4445F;
+$orange:  #FF9B19;
+$yellow:  #FFDC19;
+$violet: #8B5A9F;
+$black:  #333333;
 $body-background: $gray-dark;
 $badge-background: #9a3030;
 
